--- a/aboutUs.html
+++ b/aboutUs.html
@@ -15,7 +15,7 @@
 <body>
 	<div class="navBar navBar__courses-page">
 		<div class="navBar__group1">
-			<a href="index.html"><img src="img/logo.svg" alt="" class="logo navBar__logo"></a>
+			<a href="index.html"><img src="images/indexImg/logo.svg" alt="" class="logo navBar__logo"></a>
 			<ul class="navBar__menu">
 				<li><a href="" class="aboutUs__navBar__text navBar__text">About Us</a></li>
 				<li><a href="courses.html" class="navBar__text">Courses</a></li>
@@ -53,7 +53,7 @@
 								courses</a></button>
 					</div>
 				</div>
-				<img src="img/aboutUs--createx.png" alt="" class="header__img--createx">
+				<img src="images/aboutUsImg/aboutUs.svg" alt="" class="header__img--createx">
 			</div>
 		</div>
 		<div class="body__video">
@@ -62,7 +62,7 @@
 			</a>
 		</div>
 		<div class="aboutUs__stats">
-			<img src="img/aboutUs__stats__img.jpg" alt="" class="aboutUs__stats__img">
+			<img src="images/aboutUsImg/aboutUs__stats__img.jpg" alt="" class="aboutUs__stats__img">
 			<div class="aboutUs__stats__group">
 				<div class="stats__block">
 					<p class="numbers aboutUs__nombers">1200</p>
@@ -87,22 +87,22 @@
 			<h2 class="header__text header__text-center">Our core values</h2>
 			<div class="aboutUs__icon-boxes">
 				<div class="aboutUs__icon-box">
-					<img src="img/ic-structure.svg" alt="" class="icon-box__img">
+					<img src="images/aboutUsImg/ic-structure.svg" alt="" class="icon-box__img">
 					<h4 class="aboutUs__h4 icon-box__aboutUs__h4">Structured Approach</h4>
 					<p class="aboutUs__text">Aenean urna dictum adipiscing nec, cras quisque. Nunc in mauris. </p>
 				</div>
 				<div class="aboutUs__icon-box">
-					<img src="img/ic-chat.svg" alt="" class="icon-box__img">
+					<img src="images/aboutUsImg/ic-chat.svg" alt="" class="icon-box__img">
 					<h4 class="aboutUs__h4 icon-box__aboutUs__h4">Professional Feedbacks</h4>
 					<p class="aboutUs__text">Culpa nostrud commodo ea consequat reprehenderit aliquip. </p>
 				</div>
 				<div class="aboutUs__icon-box">
-					<img src="img/ic-target.svg" alt="" class="icon-box__img">
+					<img src="images/aboutUsImg/ic-target.svg" alt="" class="icon-box__img">
 					<h4 class="aboutUs__h4 icon-box__aboutUs__h4">Efficiency</h4>
 					<p class="aboutUs__text">Viverra scelerisque consequat net. Adipisicing esse consequat. </p>
 				</div>
 				<div class="aboutUs__icon-box">
-					<img src="img/ic-calendar.svg" alt="" class="icon-box__img">
+					<img src="images/aboutUsImg/ic-calendar.svg" alt="" class="icon-box__img">
 					<h4 class="aboutUs__h4 icon-box__aboutUs__h4">Flexible Shedule</h4>
 					<p class="aboutUs__text">Aute eiusmod dolore dolore deserunt veniam ad deserunt. </p>
 				</div>
@@ -113,7 +113,7 @@
 			<h2 class="header__text header__text-center">What do we teach</h2>
 			<div class="directions__cards">
 				<div class="direction__card">
-					<img src="img/aboutUs__img-marketing.jpg" alt="" class="direction__card__img">
+					<img src="images/aboutUsImg/aboutUs__img-marketing.jpg" alt="" class="direction__card__img">
 					<div class="direction__card__content">
 						<h3 class="card__header card__header--marketing">Marketing</h3>
 						<p class="aboutUs_text aboutUs_text__direction">Odio posuere netus quisque faucibus lectus arcu
@@ -125,7 +125,7 @@
 				</div>
 
 				<div class="direction__card">
-					<img src="img/aboutUs__img--management.jpg" alt="" class="direction__card__img">
+					<img src="images/aboutUsImg/aboutUs__img--management.jpg" alt="" class="direction__card__img">
 					<div class="direction__card__content">
 						<h3 class="card__header card__header--management">Management</h3>
 						<p class="aboutUs_text aboutUs_text__direction">Odio posuere netus quisque faucibus lectus arcu
@@ -138,7 +138,7 @@
 
 
 				<div class="direction__card">
-					<img src="img/aboutUs__img--hr.jpg" alt="" class="direction__card__img">
+					<img src="images/aboutUsImg/aboutUs__img--hr.jpg" alt="" class="direction__card__img">
 					<div class="direction__card__content">
 						<h3 class="card__header card__header--hr">HR & Recruting</h3>
 						<p class="aboutUs_text aboutUs_text__direction">Odio posuere netus quisque faucibus lectus arcu donec.
@@ -148,7 +148,7 @@
 					</div>
 				</div>
 				<div class="direction__card">
-					<img src="img/aboutUs__img-design.jpg" alt="" class="direction__card__img">
+					<img src="images/aboutUsImg/aboutUs__img-design.jpg" alt="" class="direction__card__img">
 					<div class="direction__card__content">
 						<h3 class="card__header card__header--design">Design</h3>
 						<p class="aboutUs_text aboutUs_text__direction">Odio posuere netus quisque faucibus lectus arcu donec.
@@ -158,7 +158,7 @@
 					</div>
 				</div>
 				<div class="direction__card">
-					<img src="img/aboutUs__img-development.jpg" alt="" class="direction__card__img">
+					<img src="images/aboutUsImg/aboutUs__img-development.jpg" alt="" class="direction__card__img">
 					<div class="direction__card__content">
 						<h3 class="card__header card__header--development">Development</h3>
 						<p class="aboutUs_text aboutUs_text__direction">Odio posuere netus quisque faucibus lectus arcu donec.
@@ -211,7 +211,7 @@
 					</div>
 				</div>
 			</div>
-			<img src="img/aboutUs__progress__img.jpg" alt="">
+			<img src="images/aboutUsImg/progress.svg" alt="">
 		</div>
 		<div class="aboutUs__team">
 			<p class="text-small text-small-center">Best tutors are all here</p>
@@ -219,56 +219,56 @@
 			<ul>
 				<a href="codyFisher__courses.html">
 					<li>
-						<img src="img/dianne.png" class="team__img aboutUs__team__img">
+						<img src="images/indexImg/dianne.png" class="team__img aboutUs__team__img">
 						<p class="team__name">Dianne Russell</p>
 						<p class="prof">Founder and CEO</p>
 					</li>
 				</a>
 				<a href="codyFisher__courses.html">
 					<li>
-						<img src="img/jerome.png" class="team__img">
+						<img src="images/indexImg/jerome.png" class="team__img">
 						<p class="team__name">Dianne Russell</p>
 						<p class="prof">Founder and CEO</p>
 					</li>
 				</a>
 				<a href="codyFisher__courses.html">
 					<li>
-						<img src="img/kristin.png" class="team__img">
+						<img src="images/indexImg/kristin.png" class="team__img">
 						<p class="team__name">Dianne Russell</p>
 						<p class="prof">Founder and CEO</p>
 					</li>
 				</a>
 				<a href="codyFisher__courses.html">
 					<li>
-						<img src="img/marvin.png" class="team__img">
+						<img src="images/indexImg/marvin.png" class="team__img">
 						<p class="team__name">Dianne Russell</p>
 						<p class="prof">Founder and CEO</p>
 					</li>
 				</a>
 				<a href="codyFisher__courses.html">
 					<li>
-						<img src="img/leslie.png" class="team__img">
+						<img src="images/indexImg/leslie.png" class="team__img">
 						<p class="team__name">Dianne Russell</p>
 						<p class="prof">Founder and CEO</p>
 					</li>
 				</a>
 				<a href="codyFisher__courses.html">
 					<li>
-						<img src="img/kathryn.png" class="team__img">
+						<img src="images/indexImg/kathryn.png" class="team__img">
 						<p class="team__name">Dianne Russell</p>
 						<p class="prof">Founder and CEO</p>
 					</li>
 				</a>
 				<a href="codyFisher__courses.html">
 					<li>
-						<img src="img/brooklyn.png" class="team__img">
+						<img src="images/indexImg/brooklyn.png" class="team__img">
 						<p class="team__name">Dianne Russell</p>
 						<p class="prof">Founder and CEO</p>
 					</li>
 				</a>
 				<a href="codyFisher__courses.html">
 					<li>
-						<img src="img/cody.png" class="team__img">
+						<img src="images/indexImg/cody.png" class="team__img">
 						<p class="team__name">Dianne Russell</p>
 						<p class="prof">Founder and CEO</p>
 					</li>
@@ -281,18 +281,18 @@
 		<p class="text-small text-small-center">best jobs for you</p>
 		<h2 class="header__text header__text-center">Our students work here</h2>
 		<div class="aboutUs__logos">
-			<a href=""><img src="img/InDepthConsultingLogo.png" alt="" class="aboutUs__logo"></a>
-			<a href=""><img src="img/HigherFitLogo.png" alt="" class="aboutUs__logo"></a>
-			<a href=""><img src="img/SentinalConsultingLogo.png" alt="" class="aboutUs__logo"></a>
-			<a href=""><img src="img/HappyHomeLogo.png" alt="" class="aboutUs__logo"></a>
-			<a href=""><img src="img/ForSaleLogo.png" alt="" class="aboutUs__logo"></a>
-			<a href=""><img src="img/SunsetRealtyLogo.png" alt="" class="aboutUs__logo bw__img"></a>
-			<a href=""><img src="img/AtlantisHealthLogo.png" alt="" class="aboutUs__logo"></a>
-			<a href=""><img src="img/DelMarStrategyLogo.png" alt="" class="aboutUs__logo"></a>
-			<a href=""><img src="img/CompleteHealthLogo.png" alt="" class="aboutUs__logo"></a>
-			<a href=""><img src="img/NationalHealthLogo.png" alt="" class="aboutUs__logo"></a>
-			<a href=""><img src="img/UltimateGymLogo.png" alt="" class="aboutUs__logo"></a>
-			<a href=""><img src="img/UnitedStrategyLogo.png" alt="" class="aboutUs__logo"></a>
+			<a href=""><img src="images/aboutUsImg/InDepthConsultingLogo.png" alt="" class="aboutUs__logo"></a>
+			<a href=""><img src="images/aboutUsImg/HigherFitLogo.png" alt="" class="aboutUs__logo"></a>
+			<a href=""><img src="images/aboutUsImg/SentinalConsultingLogo.png" alt="" class="aboutUs__logo"></a>
+			<a href=""><img src="images/aboutUsImg/HappyHomeLogo.png" alt="" class="aboutUs__logo"></a>
+			<a href=""><img src="images/aboutUsImg/ForSaleLogo.png" alt="" class="aboutUs__logo"></a>
+			<a href=""><img src="images/aboutUsImg/SunsetRealtyLogo.png" alt="" class="aboutUs__logo bw__img"></a>
+			<a href=""><img src="images/aboutUsImg/AtlantisHealthLogo.png" alt="" class="aboutUs__logo"></a>
+			<a href=""><img src="images/aboutUsImg/DelMarStrategyLogo.png" alt="" class="aboutUs__logo"></a>
+			<a href=""><img src="images/aboutUsImg/CompleteHealthLogo.png" alt="" class="aboutUs__logo"></a>
+			<a href=""><img src="images/aboutUsImg/NationalHealthLogo.png" alt="" class="aboutUs__logo"></a>
+			<a href=""><img src="images/aboutUsImg/UltimateGymLogo.png" alt="" class="aboutUs__logo"></a>
+			<a href=""><img src="images/aboutUsImg/UnitedStrategyLogo.png" alt="" class="aboutUs__logo"></a>
 		</div>
 	</div>
 	<div class="blog">
@@ -306,7 +306,8 @@
 		<div class="blog__body">
 			<div class="blog__listens">
 				<div class="blog__listen1">
-					<a href=""><img src="img/blog__marketing-podcast.png" alt="" class="blog__img blog__img__marketing"></a>
+					<a href="hrStatisticsBlog.html"><img src="images/blogImg/blog__marketing-podcast.png" alt=""
+							class="blog__img blog__img__marketing"></a>
 					<ul class="blog__ul">
 						<li class="blog__li">Marketing</li>
 						<li class="blog__li blog__li-date">September 4, 2020</li>
@@ -315,10 +316,11 @@
 					<p class="blog__text">What is traffic arbitrage and does it<br> really make money?</p>
 					<p class="blog__text__footer">Pharetra, ullamcorper iaculis viverra parturient sed id<br> sed.
 						Convallis proin dignissim lacus, purus gravida...</p>
-					<a href="" class="blog__a">Listen</a>
+					<a href="hrStatisticsBlog.html" class="blog__a">Listen</a>
 				</div>
 				<div class="blog__listen2">
-					<a href=""><img src="img/blog__management-video.png" alt="" class="blog__img blog__img__marketing"></a>
+					<a href="hrStatisticsBlog.html"><img src="images/blogImg/blog__management-video.png" alt=""
+							class="blog__img blog__img__marketing"></a>
 					<ul class="blog__ul">
 						<li class="blog__li">Management</li>
 						<li class="blog__li blog__li-date">August 25, 2020</li>
@@ -327,10 +329,11 @@
 					<p class="blog__text">What to do and who to talk to if you<br> want to get feedback on the product</p>
 					<p class="blog__text__footer">Neque a, senectus consectetur odio in aliquet nec eu.<br> Ultricies ac
 						nibh urna urna sagittis faucibus...</p>
-					<a href="" class="blog__a">Watch</a>
+					<a href="hrStatisticsBlog.html" class="blog__a">Watch</a>
 				</div>
 				<div class="blog__listen3">
-					<a href=""><img src="img/blog_design.png" alt="" class="blog__img blog__img__marketing"></a>
+					<a href="hrStatisticsBlog.html"><img src="images/blogImg/blog_design.png" alt=""
+							class="blog__img blog__img__marketing"></a>
 					<ul class="blog__ul">
 						<li class="blog__li">Design</li>
 						<li class="blog__li blog__li-date">August 8, 2020</li>
@@ -339,7 +342,7 @@
 						creativity?</p>
 					<p class="blog__text__footer">Curabitur nisl tincidunt eros venenatis vestibulum ac<br> placerat.
 						Tortor, viverra sed vulputate ultrices...</p>
-					<a href="" class="blog__a">Read</a>
+					<a href="hrStatisticsBlog.html" class="blog__a">Read</a>
 				</div>
 			</div>
 		</div>
@@ -353,25 +356,25 @@
 
 		</div>
 		<div class="sibscribe__img__group">
-			<img src="img/sibscribe__img.png" alt="" class="sibscribe__img">
-			<img src="img/sibscribe__img.png" alt="">
+			<img src="images/indexImg/sibscribe__img.png" alt="" class="sibscribe__img">
+			<img src="images/indexImg/sibscribe__img.png" alt="">
 		</div>
 	</div>
 	<footer>
 		<div class="footer__info">
 			<div class="footer__info__groups">
 				<div class="footer__info_group1">
-					<img src="img/logo-white.svg" alt="" class="footer__logo">
+					<img src="images/indexImg//logo-white.svg" alt="" class="footer__logo">
 					<p class="footer__p">Createx Online School is a leader in online studying. We have lots of courses and
 						programs from the main market experts. We provide relevant approaches to online learning,
 						internships and employment in the largest companies in the country. </p>
 					<div class="footer__media">
-						<a href=""><img src="img/facebook.svg" alt="" class="footer__img"></a>
-						<a href=""><img src="img/twitter.svg" alt="" class="footer__img"></a>
-						<a href=""><img src="img/youTube.svg" alt="" class="footer__img"></a>
-						<a href=""><img src="img/telegram.svg" alt="" class="footer__img"></a>
-						<a href=""><img src="img/instagram.svg" alt="" class="footer__img"></a>
-						<a href=""><img src="img/linkedIn.svg" alt="" class="footer__img"></a>
+						<a href=""><img src="images/indexImg/facebook.svg" alt="" class="footer__img"></a>
+						<a href=""><img src="images/indexImg/twitter.svg" alt="" class="footer__img"></a>
+						<a href=""><img src="images/indexImg/youTube.svg" alt="" class="footer__img"></a>
+						<a href=""><img src="images/indexImg/telegram.svg" alt="" class="footer__img"></a>
+						<a href=""><img src="images/indexImg/instagram.svg" alt="" class="footer__img"></a>
+						<a href=""><img src="images/indexImg/linkedIn.svg" alt="" class="footer__img"></a>
 					</div>
 				</div>
 				<div class="footer__info_group2">
